# lambda-parallel-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.gateway  Dockerfile.router  IMPLEMENTATION_PLAN.md  Makefile  README.md  http_microbatch_router_for_lambda_project_spec_draft.md
.github/workflows/: release-sar.yml
benchmark/: README.md  benchmark.py  loadtest.js
bootstrap/: README.md  template.yaml
bootstrap/config_publisher/: app.py
bootstrap/gateway_macro/: app.py
bootstrap/layer-proxy/: Cargo.toml  Makefile  README.md
bootstrap/layer-proxy/layer/lpr/: exec-wrapper.sh
bootstrap/layer-proxy/layer/smug/: exec-wrapper.sh
bootstrap/layer-proxy/src/: config.rs  extension.rs  lib.rs  lpr.rs  main.rs  ndjson.rs  proxy.rs  runtime_api.rs  smug.rs  state.rs
bootstrap/layer-proxy/tests/: proxy_mode_a.rs  proxy_passthrough.rs
bootstrap/router_macro/: app.py
bootstrap/tests/: test_config_publisher.py  test_gateway_macro.py  test_router_macro.py
docs/: INTERLEAVED_STREAMING_NDJSON.md  MODE_A_LAYER_PROXY_IMPLEMENTATION_PLAN.md  architecture.md  best-practices.md  integrations.md  interleaved-streaming.md  overview.md  quickstart.md  release.md
docs/archive/: IMPLEMENTATION_PLAN.md  INTERLEAVED_STREAMING_NDJSON.md  MODE_A_LAYER_PROXY_IMPLEMENTATION_PLAN.md  http_microbatch_gateway_for_lambda_project_spec_draft.md
examples/: router.yaml  spec.yaml
examples/local/: README.md  gateway.yaml
gateway/: Cargo.toml
gateway/src/: batching.rs  config.rs  lambda.rs  lib.rs  location.rs  main.rs  serde_ext.rs  server.rs  spec.rs
lambda-kit/adapter-node/: README.md  index.js  package-lock.json  package.json  tsconfig.json
lambda-kit/adapter-node/src/: index.ts
lambda-kit/adapter-node/test/: adapter.test.js
lambda-kit/adapter-rust/: Cargo.toml  README.md
lambda-kit/adapter-rust/src/: lib.rs
lambda-kit/adapter-rust/tests/: adapter.rs
lambda-kit/layer-proxy/: Makefile  README.md  samconfig.toml  template.yaml
lambda-kit/layer-proxy/layer/lpr/: exec-wrapper.sh
lambda-kit/layer-proxy/src/: lib.rs  proxy.rs  runtime_api.rs  state.rs
lambda-kit/layer-proxy/tests/: proxy_mode_a.rs
router/: Cargo.toml
router/src/: batching.rs  config.rs  lambda.rs  lib.rs  location.rs  main.rs  serde_ext.rs  server.rs  spec.rs  template.rs
sam/: README.md  samconfig.toml  template.yaml
sam/lambda/buffered/: index.js
sam/lambda/buffering-adapter/: app.ts
sam/lambda/buffering-adaptive/: app.ts
sam/lambda/buffering-dynamic/: app.ts
sam/lambda/direct-hello/: app.ts
sam/lambda/image-waiter/: app.py
sam/lambda/streaming/: index.js
sam/lambda/streaming-adapter/: app.ts
sam/lambda/streaming-adapter-sse/: app.ts
sam/lambda/streaming-dynamic/: app.ts
sam/lambda/streaming-mode-a-layer-proxy-node/: app.ts
sam/lambda/streaming-mode-a-layer-proxy-python/: app.py
sam/lambda/streaming-simple/: app.ts
sam/router/: router.yaml  spec.yaml
