[package]
name = "lpr-router"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1"
aws-sdk-s3 = "1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
futures = "0.3"
http = "1"
matchit = "0.8"
memchr = "2"
opentelemetry = "0.31"
opentelemetry-aws = { version = "0.19", features = ["trace"] }
opentelemetry-http = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls", "trace"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["experimental_trace_batch_span_processor_with_async_runtime", "rt-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
aws_lambda_events = "1"
opentelemetry_sdk = { version = "0.31", features = ["testing"] }
tokio = { version = "1", features = ["test-util"] }
tower = "0.5"
